--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </ul>
         </div>
     </nav>
+    <p> Lets test git with blama! </p>
     <script src="app.js"></script>
 </body>
 </html>
